k8s/Deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: flask-app
  labels:
    app: flask-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec: 
      containers: 
        - name: flask-app
          image: piyush63/flasknginx:flask-app-v1
          ports:
            - containerPort: 5000
