k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: flask-service
  
spec: 
  selector:
    app: flask-app

  ports:
    - name: http
      port: 80
      targetPort: 5000

  type: ClusterIP
