k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: flask.local
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: flask-service
                port: 
                  number: 80
